# advent-of-code

./: LICENSE  README.md  pyproject.toml
2023/: day-template.py  day1.py  day2.py  day2b.py  day3.py
2024/day01/: part1.py  part2.md  part2.py
2024/day02/: part1.md  part1.py  part2.py
2024/day03/: part1.py  part2.md  part2.py
2024/day04/: part1.md  part1.py  part2.md  part2.py
2024/day05/: part1.md  part1.py  part2.md  part2.py
2024/day06/: part1.md  part1.py  part2.md  part2.py
2024/day07/: part1.md  part1.py  part2.md
2024/day08-not-working/: part1.md  part1.py
2024/day09/: part1.md  part1.py  part2.py
2024/day1/: part1.md
2024/day10/: part1.md  part1.py
2024/day11/: part1.md  part1.py
2024/day12/: part1.md  part1.py
2024/day2/: part2.md  part2.py
2024/day3/: part1.md  part2.py
conda/: dev.yaml
